modules/compute/main.tf
# modules/compute/main.tf

resource "aws_security_group" "ec2_sg" {
  name        = "poc-${var.env}-ec2-sg"
  description = "Allow SSH and HTTP traffic for EC2 instances in ${var.env} environment"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
    ingress {
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "poc-${var.env}-ec2-sg"
    Env  = var.env
  }
}

resource "aws_instance" "app_server" {
  count         = var.instance_count
  ami           = var.ami_id
  instance_type = var.instance_type
  key_name      = var.key_name
  subnet_id     = var.public_subnet_ids[count.index % length(var.public_subnet_ids)]
  vpc_security_group_ids = [aws_security_group.ec2_sg.id]
  user_data     = var.user_data
  associate_public_ip_address = true
  user_data_replace_on_change = true
  tags = {
    Name = "poc-${var.env}-instance-${count.index + 1}"
    Env  = var.env
  }
}
